--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,6 @@
 </head>
 <body>
 
-<!-- REMOVE FOLLOWING LINK -->
-<a href="http://bootstrap-ecommerce.com/page-themes.html" class="btn btn-dark rounded-pill" style="font-size:13px; z-index:100; position: fixed; bottom:10px; right:10px;">Download theme</a>
-<!-- REMOVE  //END -->
-
 <header class="section-header">
 <nav class="navbar d-none d-md-flex p-md-0 navbar-expand-sm navbar-light border-bottom">
 <div class="container">
@@ -177,12 +173,12 @@
 						<li>
 							<img src="{% static 'images/icons/starts-disable.svg' %}" alt="">
 						</li>
-					</ul>
+					</ul>	
 					<div>
 						<a href="#" class="text-muted">{{product.category}}</a>
 						<a href="#" class="title">{{product.name}}</a>
 					</div>
-					<div class="price h5 mt-2">{{product.price}}SUM</div> <!-- price.// -->
+					<div class="price h5 mt-2">{{product.price }} UZS</div> <!-- price.// -->
 				</figcaption>
 			</div>
 		</div> <!-- col.// -->
@@ -238,7 +234,8 @@
 			<figcaption class="info-wrap">
 				<a href="#" class="title">{{product.name}}</a>
 				<div class="price-wrap">
-					<del class="price-old">{{product.price}}SUM</del>
+					<del class="price-old">{{product.price }} UZS</del><br>
+					<span class="price">{{product.price }} UZS</span>
 				</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
@@ -265,70 +262,7 @@
 <!-- container end.// -->
 
 <!-- ========================= FOOTER ========================= -->
-<footer class="section-footer bg-secondary text-white">
-	<div class="container">
-		<section class="footer-top  padding-y-lg">
-			<div class="row">
-				<aside class="col-md-4 col-12">
-					<article class="mr-md-4">
-						<h5 class="title">Contact us</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in feugiat lorem. </p>
-						<ul class="list-icon">
-							<li> <i class="icon fa fa-map-marker"> </i>542 Fake Street, Cityname 10021 Netheerlends </li>
-							<li> <i class="icon fa fa-envelope"> </i> info@example.com</li>
-							<li> <i class="icon fa fa-phone"> </i> (800) 060-0730, (800) 060-0730</li>
-							<li> <i class="icon fa fa-clock"> </i>Mon-Sat 10:00pm - 7:00pm</li>
-						</ul>
-					</article>
-				</aside>
-				<aside class="col-md col-6">
-					<h5 class="title">Information</h5>
-					<ul class="list-unstyled">
-						<li> <a href="#">About us</a></li>
-						<li> <a href="#">Career</a></li>
-						<li> <a href="#">Find a store</a></li>
-						<li> <a href="#">Rules and terms</a></li>
-						<li> <a href="#">Sitemap</a></li>
-					</ul>
-				</aside>
-				<aside class="col-md col-6">
-					<h5 class="title">My Account</h5>
-					<ul class="list-unstyled">
-						<li> <a href="#">Contact us</a></li>
-						<li> <a href="#">Money refund</a></li>
-						<li> <a href="#">Order status</a></li>
-						<li> <a href="#">Shipping info</a></li>
-						<li> <a href="#">Open dispute</a></li>
-					</ul>
-				</aside>
-				<aside class="col-md-4 col-12">
-					<h5 class="title">Newsletter</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in feugiat lorem. </p>
-					
-					<form class="form-inline mb-3">
-						<input type="text" placeholder="Email" class="border-0 w-auto form-control" name="">
-						<button class="btn ml-2 btn-warning"> Subscribe</button>
-					</form>
-
-					<p class="text-white-50 mb-2">Follow us on social media</p>
-					<div>
-						<a href="#" class="btn btn-icon btn-outline-light"><i class="fab fa-facebook-f"></i></a>
-						<a href="#" class="btn btn-icon btn-outline-light"><i class="fab fa-twitter"></i></a>
-						<a href="#" class="btn btn-icon btn-outline-light"><i class="fab fa-instagram"></i></a>
-						<a href="#" class="btn btn-icon btn-outline-light"><i class="fab fa-youtube"></i></a>
-					</div>
-
-				</aside>
-			</div> <!-- row.// -->
-		</section>	<!-- footer-top.// -->
-
-		<section class="footer-bottom text-center">
-			<p class="text-white">Privacy Policy - Terms of Use - User Information Legal Enquiry Guide</p>
-			<p class="text-muted"> &copy 2019 Company name, All rights reserved </p>
-			<br>
-	</section>
-	</div><!-- //container -->
-</footer>
+{% include "footer.html" %}
 <!-- ========================= FOOTER END // ========================= -->
 
 
