--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Website title - bootstrap html template</title>
+<title>Online Store</title>
 
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 
@@ -31,236 +31,17 @@
 </head>
 <body>
 
-<header class="section-header">
-<nav class="navbar d-none d-md-flex p-md-0 navbar-expand-sm navbar-light border-bottom">
-<div class="container">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarTop4">
-    <ul class="navbar-nav mr-auto">
-    	<li><span class="nav-link">Hi, <a href="#"> Sign in </a> or <a href="#"> Register </a></span></li>
-		<li><a href="#" class="nav-link"> Deals </a></li>
-		<li><a href="#" class="nav-link"> Sell </a></li>
-		<li><a href="#" class="nav-link"> Help </a></li>
-    </ul>
-    <ul class="navbar-nav">
-		<li><a href="#" class="nav-link"> <img src="{% static 'images/icons/flags/US.png' %}" height="16"> Ship to </a></li>
-		<li class="nav-item dropdown">
-		 	<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">   Watchlist </a>
-		    <ul class="dropdown-menu small">
-				<li><a class="dropdown-item" href="#">First item</a></li>
-				<li><a class="dropdown-item" href="#">Second item</a></li>
-				<li><a class="dropdown-item" href="#">Third item </a></li>
-		    </ul>
-		</li>
-		<li><a href="#" class="nav-link"> My shop </a></li>
-		<li><a href="#" class="nav-link"> <i class="fa fa-bell"></i> </a></li>
-		<li><a href="#" class="nav-link"> <i class="fa fa-shopping-cart"></i> </a></li>
-	</ul> <!-- list-inline //  -->
-  </div> <!-- navbar-collapse .// -->
-</div> <!-- container //  -->
-</nav>
+{% include "header.html" %}
 
 <div class="container">
-<section class="header-main border-bottom">
-<div class="row row-sm">
-	<div class="col-6 col-sm col-md col-lg  flex-grow-0">
-		<a href="http://bootstrap-ecommerce.com" class="brand-wrap">
-			<img class="logo" src="{% static 'images/logo.png' %}">
-		</a> <!-- brand-wrap.// -->
-	</div>
-	<div class="col-6 col-sm col-md col-lg flex-md-grow-0">
-
-		<!-- mobile-only -->
-		<div class="d-md-none float-right">
-			<a href="#" class="btn btn-light"> <i class="fa fa-bell"></i> </a>
-			<a href="#" class="btn btn-light"> <i class="fa fa-user"></i> </a>
-			<a href="#" class="btn btn-light"> <i class="fa fa-shopping-cart"></i> 2 </a>
-		</div>
-		<!-- mobile-only //end  -->
-
-		<div class="category-wrap d-none dropdown d-md-inline-block">
-			<button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown">   Shop by 
-			</button>
-			<div class="dropdown-menu">
-				<a class="dropdown-item" href="#">Machinery / Mechanical Parts / Tools </a>
-				<a class="dropdown-item" href="#">Consumer Electronics / Home Appliances </a>
-				<a class="dropdown-item" href="#">Auto / Transportation</a>
-				<a class="dropdown-item" href="#">Apparel / Textiles / Timepieces </a>
-				<a class="dropdown-item" href="#">Home & Garden / Construction / Lights </a>
-				<a class="dropdown-item" href="#">Beauty & Personal Care / Health </a> 
-			</div>
-		</div>  <!-- category-wrap.// -->
-	</div> <!-- col.// -->
-	<div class="col-lg-6 col-xl col-md-5 col-sm-12 flex-grow-1">
-		<form action="#" class="search-header">
-			<div class="input-group">
-			    <input type="text" class="form-control" placeholder="Search">
-			    <select class="custom-select border-left"  name="category_name">
-						<option value="">All type</option><option value="codex">Special</option>
-						<option value="comments">Only best</option>
-						<option value="content">Latest</option>
-				</select>
-		    </div>
-		</form> <!-- search-wrap .end// -->
-	</div> <!-- col.// -->
-	<div class="col col-lg col-md flex-grow-0">
-	    <button class="btn btn-block btn-primary" type="submit"> Search </button>
-	</div>
-	<div class="col col-lg col-md flex-grow-0">
-	    <button class="btn btn-block btn-light" type="submit"> Advanced </button>
-	</div>
-</div> <!-- row.// -->
-</section> <!-- header-main .// -->
-
-{% include "navbar.html" %}
-
-</div> <!-- container.// -->
-</header> <!-- section-header.// -->
-
-<!-- ========================= SECTION MAIN  ========================= -->
-<section class="section-intro padding-y">
-<div class="container">
-<!-- ==============  COMPONENT SLIDER  BOOTSTRAP ============  -->
-<div id="carousel1_indicator" class="slider-home-banner carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carousel1_indicator" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel1_indicator" data-slide-to="1"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static 'images/banners/slide-lg-3.jpg' %}" alt="First slide"> 
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'images/banners/slide-lg-2.jpg' %}" alt="Second slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carousel1_indicator" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carousel1_indicator" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> 
-<!-- ============ COMPONENT SLIDER BOOTSTRAP end.// ===========  .// -->	
-	
-</div> <!-- container end.// -->
-</section>
-<!-- ========================= SECTION MAIN END// ========================= -->
-
-
-<div class="container">
-
-<!-- =============== SECTION 1 =============== -->
-<section class="padding-bottom">
-<header class="section-heading mb-4">
-	<h3 class="title-section">Recommended items</h3>
-</header>
-
-<div class="row">
-	{% for product in products %}
-		<div class="col-xl-3 col-lg-3 col-md-4 col-6">
-			<div class="card card-product-grid">
-				<a href="#" class="img-wrap"> <img src="{% get_media_prefix %}{{ product.image }}"> </a>
-				<figcaption class="info-wrap">
-					<ul class="rating-stars mb-1">
-						<li style="width:80%" class="stars-active">
-							<img src="{% static 'images/icons/stars-active.svg' %}" alt="">
-						</li>
-						<li>
-							<img src="{% static 'images/icons/starts-disable.svg' %}" alt="">
-						</li>
-					</ul>	
-					<div>
-						<a href="#" class="text-muted">{{product.category}}</a>
-						<a href="#" class="title">{{product.name}}</a>
-					</div>
-					<div class="price h5 mt-2">{{product.price }} UZS</div> <!-- price.// -->
-				</figcaption>
-			</div>
-		</div> <!-- col.// -->
-	{% endfor %}
-</div> <!-- row.// -->
-</section>
-<!-- =============== SECTION 1 END =============== -->
-
-
-<!-- =============== SECTION BANNER =============== -->
-<section class="padding-bottom">
-	<div class="row">
-		<aside class="col-md-6">
-			<div class="card card-banner-lg bg-dark">
-				<img src="{% static 'images/banners/banner4.jpg' %}" class="card-img opacity">
-				<div class="card-img-overlay text-white">
-				  <h2 class="card-title">Big Deal on Clothes</h2>
-				  <p class="card-text" style="max-width: 80%">This is a wider card with text below and Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ab quae nihil praesentium impedit libero possimus id vero</p>
-				  <a href="#" class="btn btn-light">Discover</a>
-				</div>
-			 </div>
-		</aside>
-		<div class="col-md-6">
-			<div class="card card-banner-lg bg-dark">
-				<img src="{% static 'images/banners/banner5.jpg' %}" class="card-img opacity">
-				<div class="card-img-overlay text-white">
-				  <h2 class="card-title">Great Bundle for You</h2>
-				    <p class="card-text" style="max-width: 80%">Card with text below and Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ab quae nihil praesentium impedit libero possimus id vero</p>
-				  <a href="#" class="btn btn-light">Discover</a>
-				</div>
-			 </div>
-		</div> <!-- col.// -->
-	</div> <!-- row.// -->
-</section>
-<!-- =============== SECTION BANNER .//END =============== -->
 
 	
-<!-- =============== SECTION 2 =============== -->
-<section class="padding-bottom">
+	{% block main %}
 
-<header class="section-heading mb-4">
-	<h3 class="title-section">Daily deals</h3>
-</header>
+	{% endblock main %}
+	{% include "dealy_deals.html" %}
 
-<div class="row row-sm">
-	{% for product in products %}
-	<div class="col-xl-2 col-lg-3 col-md-4 col-6">
-		<div href="#" class="card card-sm card-product-grid">
-			<a href="#" class="img-wrap"> 
-				<b class="badge badge-danger mr-1">10% OFF</b>
-				<img src="{% get_media_prefix %}{{ product.image }}"> 
-			</a>
-			<figcaption class="info-wrap">
-				<a href="#" class="title">{{product.name}}</a>
-				<div class="price-wrap">
-					<del class="price-old">{{product.price }} UZS</del><br>
-					<span class="price">{{product.price }} UZS</span>
-				</div> <!-- price-wrap.// -->
-			</figcaption>
-		</div>
-	</div> <!-- col.// -->
-	{% endfor %}
-</div> <!-- row.// -->
-</section>
-<!-- =============== SECTION 2 END =============== -->
-
-
-<!-- =============== SECTION BANNER =============== -->
-<section class="padding-bottom">
-	<article class="box d-flex flex-wrap align-items-center p-5 bg-secondary">
-		<div class="text-white mr-auto">
-			<h3>Looking for fashion? </h3>
-			<p> Popular items, discounts and free shipping </p>
-		</div>
-		<div class="mt-3 mt-md-0"><a href="" class="btn btn-outline-light">Learn more</a></div>
-	</article>
-</section>
-<!-- =============== SECTION BANNER .//END =============== -->
-
-</div>  
-<!-- container end.// -->
-
+</div>
 <!-- ========================= FOOTER ========================= -->
 {% include "footer.html" %}
 <!-- ========================= FOOTER END // ========================= -->
