--- a/templates/header_bot.html
+++ b/templates/header_bot.html
@@ -22,7 +22,7 @@
                     </button>
                     <div class="dropdown-menu">
                         {% for category in categories %}
-                        <a class="dropdown-item" href="#"><b>{{category.name}}</b>  
+                        <a class="dropdown-item" href="{% url 'category-products-page' category_slug=category.slug %}"><b>{{category.name}}</b>  
                             {% for subcategory in subcategories %}
                                 {% if subcategory.category == category %}
                                     | {{ subcategory.name }} 
@@ -66,7 +66,7 @@
                       <div class="col-6">
                         {% for subcategory in subcategories %}
                             {% if subcategory.category == category %}
-                                <a href="">{{subcategory.name}}</a>
+                                <a href="{% url 'subcategory-products-page' category_slug=category.slug sub_category_slug=subcategory.slug %}">{{subcategory.name}}</a>
                             {% endif %}
                         {% endfor %}
                       </div>
