--- a/templates/store.html
+++ b/templates/store.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
+{% load has_query_string %}
+
 {% block main %}
 
 <!-- ========================= SECTION CONTENT ========================= -->
@@ -62,29 +64,7 @@
                                 </div> <!-- form-row.// -->
                                 <span class="text text-danger" id="warningText" style="display: none;">Qiymatlar oralig'i xato</span>
                                 <button class="btn btn-block btn-primary">Apply</button>
-                                <script>
-
-                                    const minPrice = document.getElementById("min-price");
-                                    const maxPrice = document.getElementById("max-price");
-                                    const warningText = document.getElementById("warningText");
- 
-                                    function checkDifference(max,min){
-                                        if (max < min){
-                                            warningText.style.display = "block";
-                                        }
-                                        else {
-                                            warningText.style.display = "none"
-                                        }
-                                    }
-
-                                    minPrice.addEventListener("input",function(){
-                                        checkDifference(maxPrice.value, minPrice.value);
-                                    });
-                                    
-                                    maxPrice.addEventListener("input",function(){
-                                        checkDifference(maxPrice.value, minPrice); 
-                                    });
-                                </script>
+                               
                             </div> <!-- inner.// -->
                         </form>
                     </div>
@@ -122,11 +102,11 @@
             </aside> <!-- col.// -->
             <main class="col-md-10">
 
-                {% if products.count > 0 %}
+                {% if products.object_list.count > 0 %}
 
                 <header class="mb-3">
                     <div class="form-inline">
-                        <strong class="mr-md-auto">{{products.count}} items found</strong>
+                        <strong class="mr-md-auto">{{products.object_list.count}} items found</strong>
                         <select class="mr-2 form-control">
                             <option>Latest items</option>
                             <option>Trending</option>
@@ -136,7 +116,7 @@
                     </div>
                 </header><!-- sect-heading -->
 
-                {% for product in products %}
+                {% for product in products.object_list %}
                 <article class="card card-product-list">
                     <div class="row no-gutters">
                         <aside class="col-md-3">
@@ -194,17 +174,22 @@
                     </div> <!-- row.// -->
                 </article> <!-- card-product .// -->
                 {% endfor %}
-                <nav class="mb-4" aria-label="Page navigation sample">
-                    <ul class="pagination">
-                        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">4</a></li>
-                        <li class="page-item"><a class="page-link" href="#">5</a></li>
-                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                    </ul>
-                </nav>
+                    <div class="pagination">
+                        <nav class="mb-4" aria-label="Page navigation sample">
+                            <ul class="pagination">
+                
+                
+                                <li class="page-item {% if not products.has_previous %}disabled{% endif %}"><a class="page-link" href="{% if  products.has_previous %}{% if request|has_query_string  %}{{request.get_full_path}}&{% else %}?{% endif %}page={{products.previous_page_number}}{% endif %}">Previous</a></li>
+                
+                
+                                {% for page_num in pages.page_range %}
+                                    <li class="page-item {% if page_num == products.number %}active{% endif %}"><a class="page-link" href="{% if request|has_query_string  %}{{request.get_full_path}}&{% else %}?{% endif %}page={{page_num}}">{{page_num}}</a></li>
+                                {% endfor %}
+                                <li class="page-item {% if not products.has_next %}disabled{% endif %}"><a class="page-link" href="{% if  products.has_next %}{% if request|has_query_string  %}{{request.get_full_path}}&{% else %}?{% endif %}page={{products.next_page_number}}{% endif %}">Next</a></li>
+                            </ul>
+                        </nav>
+                        
+                    </div>
                 {% else %}
                 <section class="section-content bg padding-y">
                     <div class="container">
@@ -234,5 +219,31 @@
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 
+<script>
+
+    const minPrice = document.getElementById("min-price");
+    const maxPrice = document.getElementById("max-price");
+    const warningText = document.getElementById("warningText");
+
+    function checkDifference(max,min){
+        if (max < min){
+            warningText.style.display = "block";
+        }
+        else {
+            warningText.style.display = "none"
+        }
+    }
+
+    minPrice.addEventListener("input",function(){
+        checkDifference(maxPrice.value, minPrice.value);
+    });
+    
+    maxPrice.addEventListener("input",function(){
+        checkDifference(maxPrice.value, minPrice); 
+    });
+</script>
+
 
 {% endblock main %}
+
+
