--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,9 @@
 </div>
 <!-- ========================= FOOTER ========================= -->
 {% include "footer.html" %}
+
+{% block script %}
+{% endblock script %}
 <!-- ========================= FOOTER END // ========================= -->
 
 
